--- a/who-i-am.css
+++ b/who-i-am.css
@@ -1,3 +1,56 @@
+body {
+    font-family: 'Exo';
+    font-size: 15px;
+    font-weight: bold;
+    height: 900px;
+}
+
+nav {
+    line-height: 25px;
+    display: flex;
+    align-items: flex-end;
+    row-gap: 10px;
+    margin: 30% 0 0 0;
+    padding: 0;
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        a {
+            text-decoration: none;
+            color: black;
+            align-self: center;
+        }
+    }
+}
+
+main {
+    border: 2px;
+    border-style: solid;
+    border-color: rgb(192, 192, 192);
+    padding: 2%;
+    margin: 2%;
+}
+
+h1 {
+    font-size: 60px;
+    font-weight: lighter;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+}
+
 .background {
     background: linear-gradient(45deg, rgba(34,193,195,1) 79%, rgba(253,187,45,1) 89%);
     animation-duration: 20s;
