--- a/what-i-do.css
+++ b/what-i-do.css
@@ -51,6 +51,10 @@ h1 {
     justify-content: flex-end;
 }
 
+.nav-projects {
+    font-family: ;
+}
+
 .background {
     background: linear-gradient(45deg, rgba(34,193,195,1) 79%, rgba(253,187,45,1) 89%);
     animation-duration: 20s;
