animation en JS

--- a/what-i-do.css
+++ b/what-i-do.css
@@ -57,9 +57,9 @@ h1 {
 
 .background {
     background: linear-gradient(45deg, rgba(34,193,195,1) 79%, rgba(253,187,45,1) 89%);
-    animation-duration: 20s;
+    /* animation-duration: 20s;
     animation-name: wave;
-    animation-iteration-count: infinite;
+    animation-iteration-count: infinite; */
 }
 
 @keyframes wave {
